--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host --port 5174",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
@@ -12,6 +12,7 @@
     "@capacitor/cli": "^7.2.0",
     "@capacitor/core": "^7.2.0",
     "@ionic/vue": "^8.5.3",
+    "swiper": "^10.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
