fix big widgets

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@capacitor/cli": "^7.2.0",
     "@capacitor/core": "^7.2.0",
     "@ionic/vue": "^8.5.3",
+    "chart.js": "^4.4.8",
     "swiper": "^10.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
